crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__async_await-3.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"let foo = async () => await a + await b;\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 40,
                    },
                },
                span: 0..40,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 7,
                                },
                            },
                            span: 4..7,
                            kind: Ident(
                                BindingIdent {
                                    name: "foo",
                                    mutable: false,
                                    span: 4..7,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 4,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 7,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 10,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 39,
                                    },
                                },
                                span: 10..39,
                                kind: Lambda(
                                    Lambda {
                                        params: [],
                                        body: Expr(
                                            Expr {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 22,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 39,
                                                    },
                                                },
                                                span: 22..39,
                                                kind: BinaryExpr(
                                                    BinaryExpr {
                                                        op: Add,
                                                        left: Expr {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 22,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 29,
                                                                },
                                                            },
                                                            span: 22..29,
                                                            kind: Await(
                                                                Await {
                                                                    expr: Expr {
                                                                        loc: SourceLocation {
                                                                            start: Position {
                                                                                line: 0,
                                                                                column: 28,
                                                                            },
                                                                            end: Position {
                                                                                line: 0,
                                                                                column: 29,
                                                                            },
                                                                        },
                                                                        span: 28..29,
                                                                        kind: Ident(
                                                                            Ident {
                                                                                loc: SourceLocation {
                                                                                    start: Position {
                                                                                        line: 0,
                                                                                        column: 28,
                                                                                    },
                                                                                    end: Position {
                                                                                        line: 0,
                                                                                        column: 29,
                                                                                    },
                                                                                },
                                                                                span: 28..29,
                                                                                name: "a",
                                                                            },
                                                                        ),
                                                                        inferred_type: None,
                                                                    },
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                        right: Expr {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 32,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 39,
                                                                },
                                                            },
                                                            span: 32..39,
                                                            kind: Await(
                                                                Await {
                                                                    expr: Expr {
                                                                        loc: SourceLocation {
                                                                            start: Position {
                                                                                line: 0,
                                                                                column: 38,
                                                                            },
                                                                            end: Position {
                                                                                line: 0,
                                                                                column: 39,
                                                                            },
                                                                        },
                                                                        span: 38..39,
                                                                        kind: Ident(
                                                                            Ident {
                                                                                loc: SourceLocation {
                                                                                    start: Position {
                                                                                        line: 0,
                                                                                        column: 38,
                                                                                    },
                                                                                    end: Position {
                                                                                        line: 0,
                                                                                        column: 39,
                                                                                    },
                                                                                },
                                                                                span: 38..39,
                                                                                name: "b",
                                                                            },
                                                                        ),
                                                                        inferred_type: None,
                                                                    },
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                        ),
                                        is_async: true,
                                        return_type: None,
                                        type_params: None,
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                        rec: false,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
